added projects route

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -3,4 +3,16 @@
     {{#if welcomeMsg}}
         <h2><h2>{{ welcomeMsg }}</h2></h2>
     {{/if}}
+
+    <ul>
+        <li>
+            <a href="/">Home</a>
+        </li>
+        <li>
+            <a href="/about">About</a>
+        </li>
+        <li>
+            <a href="/projects">Projects</a>
+        </li>
+    </ul>
 </header>
