--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -7,10 +7,9 @@
     <title>Some WebSite</title>
 </head>
 <body>
-   
     {{> header }}
 
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Consectetur, accusantium laboriosam maxime ad suscipit dolorum recusandae placeat fuga veniam nisi beatae pariatur, aliquam velit. Dolores harum pariatur esse inventore asperiores!</p>
+    <h2>Portfolio</h2>
 
     {{> footer }}
 </body>
